fix tagline overflow on Win, update footer

--- a/website/static/css/homepage/HeaderHero.css
+++ b/website/static/css/homepage/HeaderHero.css
@@ -133,7 +133,7 @@
 }
 
 .HeaderHero .tagline {
-  font-size: 56px;
+  font-size: 52px;
   line-height: 1;
   color: #333333;
   font-weight: 700;
